<resources>
    <string name="app_name">SimpleHome</string>

    <string name="home_nav">Home</string>
    <string name="home_title_frangment">Home</string>
    <string name="luci_nav">Luci</string>
    <string name="luci_title_fragment">Luci</string>
    <string name="temperature_nav">Temperature</string>
    <string name="temperature_title_fragment">Temperature</string>
    <string name="allarme_nav">Allarme</string>
    <string name="allarme_title_fragment">Allarme</string>
    <string name="settings_nav">Impostazioni</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="info_nav">Informazioni</string>
    <string name="info_title_fragment">Informazioni</string>
    <string name="interruzioni_nav">Zone filo aperte</string>
    <string name="interruzioni_title_fragment">Zone filo aperte</string>


    <string name="dialog_new_profile_title">Nuovo Profilo</string>
    <string name="dialog_new_profile_save">Salva</string>
    <string name="dialog_new_profile_close">Chiudi</string>
    <string name="dialog_profilo_txt_etichetta">Etichetta:</string>
    <string name="dialog_profilo_txt_metodo">Metodo:</string>
    <string name="dialog_profilo_txt_metodo_http">HTTP://</string>
    <string name="dialog_profilo_txt_metodo_https">HTTPS://</string>
    <string name="dialog_profilo_txt_url">URL:</string>
    <string name="dialog_profilo_txt_username">Username:</string>
    <string name="dialog_profilo_txt_password">Password:</string>
    <string name="dialog_profilo_cam_txt_metodo">Metodo videosorveglianza:</string>
    <string name="dialog_profilo_cam_txt_url">URL videosorveglianza:</string>
    <string name="dialog_profilo_cam_txt_username">Username videosorveglianza:</string>
    <string name="dialog_profilo_cam_txt_password">Password videosorveglianza:</string>

    <string name="dialog_info_profile_title">Profilo</string>
    <string name="dialog_info_profile_delete">Delete</string>
    <string name="dialog_info_profile_close">Chiudi</string>
    <string name="logo_description">logo</string>

    <string name="luce">Luce</string>
    <string name="luce_accesa">accesa</string>
    <string name="luce_spenta">spenta</string>

    <string name="errore_change_stato_luci">Cambio stato luci non riuscito</string>
    <string name="errore_generico">Si è verificato un errore</string>
    <string name="errore_host_non_raggiungibile">Host non raggiungibile</string>
    <string name="errore_host_non_valido">Host non valido</string>

    <string name="errore_change_temperatura">Cambio temperatura non riuscito</string>

    <string name="dbl_back_to_exit">Premi ancora per uscire</string>
    <string name="logo">logo</string>
    <string name="allarme_disattivato">disattivato</string>
    <string name="allarme_attivato">attivato</string>

    <string name="cam_nav">Videosorveglianza</string>
    <string name="cam_title_fragment">Videosorveglianza</string>
    <string name="camPicAlt">Camera picture</string>

</resources>
