<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="io.alelli.simplehome2.WelcomeActivity"
        tools:showIn="@layout/activity_welcome">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_txt_etichetta"
            android:id="@+id/dialog_profilo_txt_etichetta"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_profilo_etichetta"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_txt_metodo"
            android:id="@+id/dialog_profilo_txt_metodo"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_txt_metodo_http"
            android:id="@+id/dialog_profilo_metodo_http"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_txt_metodo_https"
            android:id="@+id/dialog_profilo_metodo_https"
            android:checked="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_txt_url"
            android:id="@+id/dialog_profilo_txt_url"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_profilo_url"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_txt_username"
            android:id="@+id/dialog_profilo_txt_username"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_profilo_username"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_txt_password"
            android:id="@+id/dialog_profilo_txt_password"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/dialog_profilo_password" />

        <!-- CAM -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_cam_txt_metodo"
            android:id="@+id/dialog_profilo_cam_txt_metodo"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_txt_metodo_http"
            android:id="@+id/dialog_profilo_cam_metodo_http"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_txt_metodo_https"
            android:id="@+id/dialog_profilo_cam_metodo_https"
            android:checked="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_cam_txt_url"
            android:id="@+id/dialog_profilo_cam_txt_url"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_profilo_cam_url"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_cam_txt_username"
            android:id="@+id/dialog_profilo_cam_txt_username"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_profilo_cam_username"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_profilo_cam_txt_password"
            android:id="@+id/dialog_profilo_cam_txt_password"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/dialog_profilo_cam_password" />

    </LinearLayout>
</ScrollView>