<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="io.alelli.simplehome2.HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/luci_nav"
        android:id="@+id/button_luci"
        android:layout_gravity="left|top"
        android:backgroundTint="@color/accent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature_nav"
        android:id="@+id/button_temperature"
        android:layout_gravity="center_horizontal|top"
        android:backgroundTint="@color/accent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allarme_nav"
        android:id="@+id/button_allarme"
        android:layout_gravity="right|top"
        android:backgroundTint="@color/accent" />

</FrameLayout>
